[package]
name = "scars"
version = "0.1.0"
description = "A packet builder like scapy(Python) in rust"
homepage = "https://github.com/Trojanking123/scars"
repository = "https://github.com/Trojanking123/scars"
license = "MIT OR Apache-2.0"
authors = [
  "wuqian <wuqianking123@gmail.com>",
]
readme = "README.md"
keywords = ["networking", "transport", "packet", "protocol", "packet-crafting"]
categories = ["network-programming"]


[dependencies]
derive-new = "0.5"
ipnetwork = "0.12.8"
pnet = "0.26.0"
pnet_datalink = "0.26.0"
pnet_base = "0.26.0"
pnet_macros_support = "0.26.0"

